--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: "Arial";
@@ -17,13 +18,18 @@ body
 }
 #cabecera
 {
-    background: #33a;
+    background: #37488b;
     box-shadow: 0px 2px 50px 0px rgb(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
@@ -36,3 +42,7 @@ body
     font-size: 20px;
 }
 #post
+{
+    background: white;
+    padding: 1em;
+}
